Gestures: Implement launch gestures[1/2]
A fork of Gesture Anywhere, custom configuration and extra features are
coming soon

Signed-off-by: Chris <sirhc95@cypheros.co>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -173,6 +173,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".cypher.launchgestures.LaunchGesturesBuilderActivity" />
+        <activity android:name=".cypher.launchgestures.LaunchGesturesCreateActivity" />   
+
         <!-- Wireless Controls -->
 
         <activity android:name="Settings$WirelessSettingsActivity"
